--- a/index.html
+++ b/index.html
@@ -810,10 +810,10 @@
         <div class="logo">pearl</div>
         <nav>
             <ul id="navMenu">
-                <li><a href="#work">Work</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact" class="nav-cta">Contact</a></li>
+                <li><a href="work.html">Work</a></li>
+                <li><a href="service.html">Services</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html" class="nav-cta">Contact</a></li>
             </ul>
         </nav>
         <div class="menu-toggle" id="menuToggle">
