--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@
         <div class="hero-tag">Branding · Product Design</div>
         <h1>Discover the essence<br>of Pearl, a free<br>Framer template.</h1>
         <p class="hero-description">Let's shape your brand into a masterpiece together.</p>
-        <a href="#work" class="hero-cta">
+        <a href="./work.html" class="hero-cta">
             <span>Explore Our Work</span>
             <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7.5 15L12.5 10L7.5 5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
